Trabajo en Home

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,8 @@
+.card1{
+    background-image: url("../../assets/img/bg/r1/r1-1.png");
+    background-size: cover;
+}
 
+.centrar1{
+    text-align: center;
+}
