--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,33 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+    <ion-thumbnail>
+      <img src="../../assets/img/personajes/P4.1.png">
+    </ion-thumbnail>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs">docs</a> will be your guide.</p>
+  <ion-card class="card1">
+    <ion-card-content>
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-text color="light" class="centrar1">
+              <h1>VIAJA EN MOTO</h1>
+            </ion-text>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col class="centrar1">
+            <ion-button color="light">ACEPTAR RETO</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed" size="small" color="light" fill="clear">
+        <ion-fab-button>
+          <ion-icon name="more"></ion-icon>
+        </ion-fab-button>
+      </ion-fab> -->
+    </ion-card-content>
+  </ion-card>
 </ion-content>
