Avance Home-ACS-Empresas SIN TABS

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,14 +6,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-card class="card1">
     <ion-card-content>
       <ion-grid>
         <ion-row>
           <ion-col>
             <ion-text color="light" class="centrar1">
-              <h1>VIAJA EN MOTO</h1>
+              <h1>VIAJA EN BICICLETA</h1>
             </ion-text>
           </ion-col>
         </ion-row>
@@ -23,11 +23,11 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-      <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed" size="small" color="light" fill="clear">
-        <ion-fab-button>
-          <ion-icon name="more"></ion-icon>
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed" fill="clear">
+        <ion-fab-button color="light">
+          <ion-icon name="keypad"></ion-icon>
         </ion-fab-button>
-      </ion-fab> -->
+      </ion-fab>
     </ion-card-content>
   </ion-card>
 </ion-content>
